2010-02-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* System.IO.Ports: New test directory.

2010-01-29  Mike Kestner <mkestner@novell.com>

	* System.Net/WebUtilityTest.cs: port of tests from System.Web.

2009-05-14  Jonathan Pryor  <jpryor@novell.com>

	* test-config-file: Revert the prior change, as this breaks 1.0
	  profile testing.
	* test-config-file-net-2.0: Added; config file to use when testing
	  under the .NET 2.0+ profile, for #502944.

2009-05-12  Jonathan Pryor  <jpryor@novell.com>

	* test-config-file: Add a /configuration/system.diagnostics/source
	  section to elicit the buggy behavior found in #502944.

2008-12-09  Christian Hergert <christian.hergert@gmail.com>

	* System.Diagnostics/CounterCreationDataTest.cs: New test to verify
	that CounterHelp defaults to String.Empty.

2007-12-04  Arina Itkes <arinai@mainsoft.com>

	* System_test.dll.sources : added RegexReplaceTests.cs
	* PerlTest.cs, PerlTrials.cs, RegexResultTests.cs: New tests added.

2007-12-04  Arina Itkes <arinai@mainsoft.com>

	* UriTest.cs, UriTest2.cs : Tests that check Unix path should 
	  not run on Windows.

2007-07-06  Alan McGovern  <amcgovern@novell.com>

	* UriTest.cs : Added test to check that whitespace
	is trimmed correctly before parsing a Uri.

2007-07-06  Alan McGovern  <amcgovern@novell.com>

	* SoundPlayerTest.cs : added SoundPlayerTest.cs

2007-05-19  Atsushi Enomoto  <atsushi@ximian.com>

	* System_test.dll.sources : added DelimitedListTraceListenerTest.cs.

2007-04-19  Atsushi Enomoto  <atsushi@ximian.com>

	* System.dll.sources : added XmlWriterTraceListener.cs.
	* System_test.dll.sources : added TraceListenerTest.cs and
	  XmlWriterTraceListenerTest.cs.

2007-02-01  Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* System.Test20.vmwcsproj: in project's files list - changed
	SocketTest.cs to SocketTest.jvm.cs .

2007-01-30  Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* System.Test20.vmwcsproj: updated list of files.
